2013-08-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.h (struct x_output) [HAVE_X_I18N]: Remove xic_base_fontname
	member which is not really used any more.
	(FRAME_XIC_BASE_FONTNAME): Remove.
	* xfns.c (xic_free_fontset): Adjust user.
	* xmenu.c (mouse_position_for_popup, x_activate_menubar)
	(update_frame_menubar, set_frame_menubar, free_frame_menubar)
	(create_and_show_popup_menu, xmenu_show, create_and_show_dialog)
	(xdialog_show): Use eassert for debugging check.
	* w32term.c (x_unfocus_frame): Remove unused dummy function.

2013-08-01  Paul Eggert  <eggert@cs.ucla.edu>

	* fileio.c, fns.c (merge): Move extern decl from here ...
	* lisp.h (merge): ... to here.

2013-08-01  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix last font-related change.
	* w32font.h (w32font_list_internal, w32font_match_internal):
	Fix prototype.
	* w32uniscribe.c (uniscribe_list, uniscribe_match):
	(uniscribe_list_family): Adjust to match font API change.
	MS-Windows breakage reported by Juanma Barranquero <lekktu@gmail.com>
	at http://lists.gnu.org/archive/html/emacs-devel/2013-08/msg00006.html.

2013-08-01  Dmitry Antipov  <dmantipov@yandex.ru>

	* frame.h (FRAME_MOUSE_UPDATE):
	* nsterm.m (ns_frame_up_to_date): Omit redundant check
	whether hlinfo->mouse_face_mouse_frame is non-NULL.

2013-08-01  Dmitry Antipov  <dmantipov@yandex.ru>

	Avoid redundant Lisp_Object <-> struct frame conversions in font API.
	* font.h (struct font_driver): Change list, match, and list_family
	functions to accept struct frame * as first arg.
	* font.c (font_score, font_compare, font_sort_entities): Remove
	prototypes.
	(font_sort_entities, font_list_entities, font_select_entity):
	(font_find_for_lface, Flist_fonts, Ffont_family_list): Adjust to
	match font API change.
	* xfont.c (xfont_list, xfont_match, xfont_list_family):
	* ftfont.c (ftfont_list, ftfont_match, ftfont_list_family):
	* ftxfont.c (ftxfont_list, ftxfont_match):
	* xftfont.c (xftfont_list, xftfont_match):